# linalg

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Matrix.hpp  README.md  compile_commands.json  main  main.cpp  matrix.cpp
.cache/clangd/index/: Matrix.hpp.CDA5C05247362625.idx  main.cpp.CD625C46FCA7A372.idx
include/lin_alg/: Matrix.hpp  Rational.hpp
src/: example.cpp
tests/: CMakeLists.txt  test_matrix.cpp  test_rational.cpp
